# animation_transition

./: Cargo.toml  README.md
animation_transition/: Cargo.toml  README.md
animation_transition/src/: lib.rs  traits.rs
animation_transition_derive/: Cargo.toml  LICENSE  README.md
animation_transition_derive/src/: animation_transition_macro.rs  lib.rs
