[package]
name = "animation_transition_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "animation_transition_derive"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
animation_transition = { version = "0.1.0", path = "../animation_transition" }